<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/sky_blue"
    tools:context=".NoteDetail">

    <RelativeLayout
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:id="@+id/title_bar_layout">
    <TextView
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/page_title"
    android:text="@string/add_new_note"
    android:textSize="32sp"
    android:textColor="@color/white"
        android:textStyle="bold"/>

        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/save_note_btn"
            android:src="@drawable/ic_baseline_done_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:tint="@color/white"
        android:background="?attr/selectableItemBackgroundBorderless"
        />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:layout_marginVertical="26dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/notes_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/title"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_content_text"
            android:hint="@string/content"
            android:gravity="top"
            android:minLines="15"
        android:textSize="20sp"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:textColor="@color/black"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_note_text_view_btn"
        android:text="Delete note"
    android:layout_alignParentBottom="true"
        android:visibility="gone"
    android:gravity="center"
    android:textSize="18sp"
    android:textColor="#FF0008"/>



</RelativeLayout>